--- a/index.html
+++ b/index.html
@@ -24,91 +24,96 @@
   <!-- Display stuff you should know logo nested in an anchor tag to link to index.html -->
 
   <!-- Write the markup for a navigation and link items to appropriate pages -->
-  About
-  Episodes
 
 
 
-  <!-- Add an element that represents the main content of the page -->
+  <main>
+    <!-- Add an element that represents the main content of the page -->
 
-  <!-- Main heading for the page -->
-  Stuff You Should Know Podcast
+    <!-- Main heading for the page -->
+    <h1>Stuff You Should Know Podcast</h1>
+    <!-- Include a tag that groups the 'About' and 'Facts' content -->
 
-  <!-- Include a tag that groups the 'About' and 'Facts' content -->
+    <!-- Section heading -->
+    <h2>About the Podcast</h2>
 
-  <!-- Section heading -->
-  About the Podcast
+    <p>Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published by
+      the
+      HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
+    </p>
+    <p>The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using
+      popular
+      culture as a reference giving the podcast comedic value.
+    </p>
 
-  Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published by the
-  HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
+    <!-- Section sub-heading, followed by a list -->
+    <h3>Facts about the show:</h3>
+    -Show is downloaded more than 1 million times per week.
+    -Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from the
+    podcast.
+    -Josh and Chuck receive over 350 pieces of fan mail a week.
 
-  The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using popular
-  culture as a reference giving the podcast comedic value.
-
-  <!-- Section sub-heading, followed by a list -->
-  Facts about the show:
-
-  -Show is downloaded more than 1 million times per week.
-  -Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from the
-  podcast.
-  -Josh and Chuck receive over 350 pieces of fan mail a week.
-
-  <!-- Link to about.html -->
-  Read more about the show and hosts
-
-
-  <!-- Include a tag that groups the 'Featured Episodes' content -->
-
-  <!-- Section heading -->
-  Featured Episodes
-
-  <!-- Include a tag for independent, self-contained content content -->
-
-  <!-- Section sub-heading -->
-  Interesting Origins of Everday Phrases
-
-  <!-- Display image relevant to topic -->
-
-  We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone
-  what they found. That’s the gist of this episode!
-
-  <!-- Link to existing html page within episodes directory; relevant to topic -->
-  Learn more
+    <!-- Link to about.html -->
+    Read more about the show and hosts
 
 
+    <!-- Include a tag that groups the 'Featured Episodes' content -->
 
-  <!-- Include a tag for independent, self-contained content content -->
+    <!-- Section heading -->
+    <h2>Featured Episodes</h2>
 
-  <!-- Section sub-heading -->
-  The History of Fake Towns
+    <!-- Include a tag for independent, self-contained content content -->
 
-  <!-- Display image relevant to topic -->
+    <!-- Section sub-heading -->
+    <h3>Interesting Origins of Everday Phrases</h3>
+    <!-- Display image relevant to topic -->
 
-  There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic suburb
-  Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
+    We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+    everyone
+    what they found. That’s the gist of this episode!
 
-  <!-- Link to existing html page within episodes directory; relevant to topic -->
-  Learn more
+    <!-- Link to existing html page within episodes directory; relevant to topic -->
+    Learn more
 
 
 
-  <!-- Include a tag for independent, self-contained content content -->
+    <!-- Include a tag for independent, self-contained content content -->
 
-  <!-- Section sub-heading -->
-  Doppelgängers: Hey you, you're me!
+    <!-- Section sub-heading -->
+    <h3>The History of Fake Towns
+    </h3>
+    <!-- Display image relevant to topic -->
 
-  <!-- Display image relevant to topic -->
+    There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
+    suburb
+    Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
 
-  Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there could!
+    <!-- Link to existing html page within episodes directory; relevant to topic -->
+    Learn more
 
-  <!-- Link to existing html page within episodes directory; relevant to topic -->
-  Learn more
+
+
+    <!-- Include a tag for independent, self-contained content content -->
+
+    <!-- Section sub-heading -->
+    <h3>Doppelgängers: Hey you, you're me!
+    </h3>
+    <!-- Display image relevant to topic -->
+
+    Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
+    could!
+
+    <!-- Link to existing html page within episodes directory; relevant to topic -->
+    Learn more
+
+
+  </main>
 
 
 
   <!-- Include the tag for footer content -->
-  &copy; SYSK 2023
-
+  <p><small>&copy; SYSK 2023
+    </small></p>
 
 </body>
 
