--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <header>
+
+    <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav>
       <ul>
         <li><a href="about.html">About</a></li>
@@ -67,6 +69,7 @@
     <!-- Section sub-heading -->
     <h3>Interesting Origins of Everday Phrases</h3>
     <!-- Display image relevant to topic -->
+    <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
 
     We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
     everyone
@@ -80,8 +83,8 @@
     <!-- Include a tag for independent, self-contained content content -->
 
     <!-- Section sub-heading -->
-    <h3>The History of Fake Towns
-    </h3>
+    <h3>The History of Fake Towns</h3>
+    <img src="../images/fake-towns.jpeg" alt="image of SYSK fake towns podcast">
     <!-- Display image relevant to topic -->
 
     There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
@@ -96,8 +99,8 @@
     <!-- Include a tag for independent, self-contained content content -->
 
     <!-- Section sub-heading -->
-    <h3>Doppelgängers: Hey you, you're me!
-    </h3>
+    <h3>Doppelgängers: Hey you, you're me!</h3>
+    <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
     <!-- Display image relevant to topic -->
 
     Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
