Added relevant paragraph tags to index.html

--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
 
     <!-- Section sub-heading, followed by a list -->
     <h3>Facts about the show:</h3>
-    -Show is downloaded more than 1 million times per week.
-    -Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from the
-    podcast.
-    -Josh and Chuck receive over 350 pieces of fan mail a week.
+    <ul>
+      <li>Show is downloaded more than 1 million times per week.</li>
+      <li>Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from
+        the
+        podcast.</li>
+      <li>Josh and Chuck receive over 350 pieces of fan mail a week.
+      </li>
+    </ul>
 
     <!-- Link to about.html -->
-    Read more about the show and hosts
-
+    <a href="about.html">Read more about the show and hosts
+    </a>
 
     <!-- Include a tag that groups the 'Featured Episodes' content -->
 
@@ -65,58 +69,62 @@
     <h2>Featured Episodes</h2>
 
     <!-- Include a tag for independent, self-contained content content -->
+    <section>
+      <!-- Section sub-heading -->
+      <h3>Interesting Origins of Everday Phrases</h3>
+      <!-- Display image relevant to topic -->
+      <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
 
-    <!-- Section sub-heading -->
-    <h3>Interesting Origins of Everday Phrases</h3>
-    <!-- Display image relevant to topic -->
-    <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
-
-    We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
-    everyone
-    what they found. That’s the gist of this episode!
-
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-    Learn more
-
+      <p> We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+        everyone
+        what they found. That’s the gist of this episode!
+  </p> 
+      <!-- Link to existing html page within episodes directory; relevant to topic -->
 
 
-    <!-- Include a tag for independent, self-contained content content -->
+      <!-- Include a tag for independent, self-contained content content -->
+    </section>
+    <section>
+      <!-- Section sub-heading -->
+      <h3>The History of Fake Towns</h3>
+      <img src="../images/fake-towns.jpeg" alt="image of SYSK fake towns podcast">
+      <!-- Display image relevant to topic -->
 
-    <!-- Section sub-heading -->
-    <h3>The History of Fake Towns</h3>
-    <img src="../images/fake-towns.jpeg" alt="image of SYSK fake towns podcast">
-    <!-- Display image relevant to topic -->
-
-    There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
-    suburb
-    Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-    Learn more
+      <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
+        suburb
+        Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
+  </p> 
+      <!-- Link to existing html page within episodes directory; relevant to topic -->
+      Learn more
 
 
 
-    <!-- Include a tag for independent, self-contained content content -->
+      <!-- Include a tag for independent, self-contained content content -->
+    </section>
+    <section>
+      <!-- Section sub-heading -->
+      <h3>Doppelgängers: Hey you, you're me!</h3>
+      <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
+      <!-- Display image relevant to topic -->
 
-    <!-- Section sub-heading -->
-    <h3>Doppelgängers: Hey you, you're me!</h3>
-    <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
-    <!-- Display image relevant to topic -->
+     <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
+      could!</p> 
 
-    Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
-    could!
+      <!-- Link to existing html page within episodes directory; relevant to topic -->
+      Learn more
 
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-    Learn more
+    </section>
+
 
 
   </main>
+  <footer>
+    <!-- Include the tag for footer content -->
+    <p><small>&copy; SYSK 2023
+      </small></p>
+  </footer>
 
 
-
-  <!-- Include the tag for footer content -->
-  <p><small>&copy; SYSK 2023
-    </small></p>
 
 </body>
 
