--- a/index.html
+++ b/index.html
@@ -21,55 +21,46 @@
 
 
   </header>
-  <!-- Include the tag for introductory content -->
-
-  <!-- Display stuff you should know logo nested in an anchor tag to link to index.html -->
-
-  <!-- Write the markup for a navigation and link items to appropriate pages -->
-
-
-
+ 
   <main>
-    <!-- Add an element that represents the main content of the page -->
-
-    <!-- Main heading for the page -->
+ 
     <h1>Stuff You Should Know Podcast</h1>
-    <!-- Include a tag that groups the 'About' and 'Facts' content -->
+ <section>
+ 
+  <h2>About the Podcast</h2>
 
-    <!-- Section heading -->
-    <h2>About the Podcast</h2>
+  <p>Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published by
+    the
+    HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
+  </p>
+  <p>The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using
+    popular
+    culture as a reference giving the podcast comedic value.
+  </p>
 
-    <p>Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published by
+ 
+  <h3>Facts about the show:</h3>
+  <ul>
+    <li>Show is downloaded more than 1 million times per week.</li>
+    <li>Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from
       the
-      HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
-    </p>
-    <p>The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using
-      popular
-      culture as a reference giving the podcast comedic value.
-    </p>
+      podcast.</li>
+    <li>Josh and Chuck receive over 350 pieces of fan mail a week.
+    </li>
+  </ul>
 
-    <!-- Section sub-heading, followed by a list -->
-    <h3>Facts about the show:</h3>
-    <ul>
-      <li>Show is downloaded more than 1 million times per week.</li>
-      <li>Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from
-        the
-        podcast.</li>
-      <li>Josh and Chuck receive over 350 pieces of fan mail a week.
-      </li>
-    </ul>
+  <!-- Link to about.html -->
+  <a href="about.html" aria-label="link to about page containing more relevant information about SYSK">Read more about the show and hosts
+  </a>
 
-    <!-- Link to about.html -->
-    <a href="about.html">Read more about the show and hosts
-    </a>
+ </section>   
+  
 
-    <!-- Include a tag that groups the 'Featured Episodes' content -->
-
-    <!-- Section heading -->
+</section>
+  
     <h2>Featured Episodes</h2>
 
     <!-- Include a tag for independent, self-contained content content -->
-    <section>
       <!-- Section sub-heading -->
       <h3>Interesting Origins of Everday Phrases</h3>
       <!-- Display image relevant to topic -->
@@ -80,7 +71,7 @@
         what they found. That’s the gist of this episode!
   </p> 
       <!-- Link to existing html page within episodes directory; relevant to topic -->
-
+<a href="../episodes/everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
 
       <!-- Include a tag for independent, self-contained content content -->
     </section>
@@ -95,8 +86,7 @@
         Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
   </p> 
       <!-- Link to existing html page within episodes directory; relevant to topic -->
-      Learn more
-
+     <a href="../episodes/fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
 
 
       <!-- Include a tag for independent, self-contained content content -->
@@ -111,8 +101,7 @@
       could!</p> 
 
       <!-- Link to existing html page within episodes directory; relevant to topic -->
-      Learn more
-
+      <a href="../episodes/doppelgangers.html" aria-label="link to doppelgagners podcast page">Learn more</a>
     </section>
 
 
