--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <header>
+  <header role="banner">
 
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="about.html">About</a></li>
         <li><a href="../build-a-website/episodes/episodes.html">Episodes</a></li>
@@ -21,59 +21,60 @@
 
 
   </header>
- 
-  <main>
- 
+
+  <main role="main">
+
     <h1>Stuff You Should Know Podcast</h1>
- <section>
- 
-  <h2>About the Podcast</h2>
+    <section>
 
-  <p>Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published by
-    the
-    HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
-  </p>
-  <p>The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using
-    popular
-    culture as a reference giving the podcast comedic value.
-  </p>
+      <h2>About the Podcast</h2>
 
- 
-  <h3>Facts about the show:</h3>
-  <ul>
-    <li>Show is downloaded more than 1 million times per week.</li>
-    <li>Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes from
-      the
-      podcast.</li>
-    <li>Josh and Chuck receive over 350 pieces of fan mail a week.
-    </li>
-  </ul>
+      <p>Stuff You Should Know, often abbreviated as SYSK, is a free, award-winning podcast and video series published
+        by
+        the
+        HowStuffWorks website and hosted by Josh Clark and Charles W. "Chuck" Bryant, both writers at HowStuffWorks.
+      </p>
+      <p>The podcast, released every Tuesday and Thursday, educates listeners on a wide variety of topics, often using
+        popular
+        culture as a reference giving the podcast comedic value.
+      </p>
 
-  <!-- Link to about.html -->
-  <a href="about.html" aria-label="link to about page containing more relevant information about SYSK">Read more about the show and hosts
-  </a>
 
- </section>   
-  
+      <h3>Facts about the show:</h3>
+      <ul>
+        <li>Show is downloaded more than 1 million times per week.</li>
+        <li>Hasbro released a special edition of Trivial Pursuit: The Stuff You Should Know Edition based on episodes
+          from
+          the
+          podcast.</li>
+        <li>Josh and Chuck receive over 350 pieces of fan mail a week.
+        </li>
+      </ul>
 
-</section>
-  
+      <a href="about.html" aria-label="link to about page containing more relevant information about SYSK">Read more
+        about the show and hosts
+      </a>
+
+    </section>
+
+
+    </section>
+
     <h2>Featured Episodes</h2>
 
+    
+    <h3>Interesting Origins of Everday Phrases</h3>
+    <!-- Display image relevant to topic -->
+    <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
+
+    <p> We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+      everyone
+      what they found. That’s the gist of this episode!
+    </p>
+    <!-- Link to existing html page within episodes directory; relevant to topic -->
+    <a href="../episodes/everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
+
     <!-- Include a tag for independent, self-contained content content -->
-      <!-- Section sub-heading -->
-      <h3>Interesting Origins of Everday Phrases</h3>
-      <!-- Display image relevant to topic -->
-      <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
-
-      <p> We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
-        everyone
-        what they found. That’s the gist of this episode!
-  </p> 
-      <!-- Link to existing html page within episodes directory; relevant to topic -->
-<a href="../episodes/everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
-
-      <!-- Include a tag for independent, self-contained content content -->
     </section>
     <section>
       <!-- Section sub-heading -->
@@ -84,9 +85,9 @@
       <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
         suburb
         Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-  </p> 
+      </p>
       <!-- Link to existing html page within episodes directory; relevant to topic -->
-     <a href="../episodes/fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
+      <a href="../episodes/fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a>
 
 
       <!-- Include a tag for independent, self-contained content content -->
@@ -97,8 +98,8 @@
       <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
       <!-- Display image relevant to topic -->
 
-     <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
-      could!</p> 
+      <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
+        could!</p>
 
       <!-- Link to existing html page within episodes directory; relevant to topic -->
       <a href="../episodes/doppelgangers.html" aria-label="link to doppelgagners podcast page">Learn more</a>
@@ -107,7 +108,7 @@
 
 
   </main>
-  <footer>
+  <footer role="contentinfo">
     <!-- Include the tag for footer content -->
     <p><small>&copy; SYSK 2023
       </small></p>
