added relevant boiler template to about.html

--- a/about.html
+++ b/about.html
@@ -7,17 +7,21 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- Include the tag for introductory content -->
 
-    <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-  
-    <!-- Write the markup for a navigation and link items to appropriate pages -->
-    About
-    Episodes
+  <header role="banner">
+
+    <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
+    <nav role="navigation">
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="../build-a-website/episodes/episodes.html">Episodes</a></li>
+      </ul>
+    </nav>
 
 
-
-  <!-- Add an element that represents the main content of the page --> 
+  </header>
+  <main>
+<!-- Add an element that represents the main content of the page --> 
 
     <!-- Include a tag that groups the 'About' content -->
 
@@ -49,9 +53,20 @@
       
 
 
-  <!-- Include the tag for footer content -->
-  &copy; SYSK 2023 
+
+
+  </main>
   
+
+
+
+  
+
+  <!-- Include the tag for footer content -->
+ <footer>
+  <p><small>&copy; SYSK 2023 
+  </small></p>
+ </footer> 
   
 </body>
 </html>
