--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>About</title>
 </head>
+
 <body>
 
   <header role="banner">
@@ -21,52 +23,68 @@
 
   </header>
   <main>
-<!-- Add an element that represents the main content of the page --> 
+    <!-- Add an element that represents the main content of the page -->
 
     <!-- Include a tag that groups the 'About' content -->
+    <section>
+      <h1>About Stuff You Should Know Podcast</h1>
 
-      <!-- Section / Main heading for the page -->
-      About Stuff You Should Know Podcast
+      <p>Josh Clark and Chuck Bryant are the hosts of Stuff You Should Know, the research-based, award-winning general
+        knowledge podcast loved around the world. Since 2008, the pair have produced more than 1500 episodes and SYSK
+        was
+        the first podcast to hit 500 million downloads on Apple Podcasts as well as the first to reach a billion
+        downloads
+        globally, and is closing in on its second billion.
+      </p>
+      <p>
+        Chuck and Josh have recorded episodes on everything from disco to the time when Nazis invaded Florida in WWII,
+        wonky
+        stuff like trickle-down economics and voter suppression, science-y topics like the sun, global warming,
+        bioluminescence and willpower, and just totally random topics you'd never think could be interesting like grass,
+        zoot suits and shotgun houses (all three of those are great ones, by the way).
+      </p>
 
-      Josh Clark and Chuck Bryant are the hosts of Stuff You Should Know, the research-based, award-winning general knowledge podcast loved around the world. Since 2008, the pair have produced more than 1500 episodes and SYSK was the first podcast to hit 500 million downloads on Apple Podcasts as well as the first to reach a billion downloads globally, and is closing in on its second billion.
-      
-      Chuck and Josh have recorded episodes on everything from disco to the time when Nazis invaded Florida in WWII, wonky stuff like trickle-down economics and voter suppression, science-y topics like the sun, global warming, bioluminescence and willpower, and just totally random topics you'd never think could be interesting like grass, zoot suits and shotgun houses (all three of those are great ones, by the way).
+
+    </section>
+    <!-- Section / Main heading for the page -->
 
 
 
     <!-- Include a tag that groups the 'Hosts' content -->
-
-      <!-- Section heading -->
-      The hosts
-
+    <section>
+      <h2>The hosts</h2>
       <!-- Display image of hosts Josh and Chuck -->
-
+      <img src="../images/josh-chuck.jpeg" alt="picture of host and co-host of SYSK josh and chuck">
       <!-- Section sub-heading -->
-      Josh Clark
-
-      A senior writer at HowStuffWorks.com and co-host of the podcast Stuff You Should Know where he simplifies and reveals surprising facts about common ideas. Josh began his writing career when his third-grade teacher told him a short story he wrote was kind of good. From that moment on he has been writing. Josh pursued a profession as a journalist and worked as a writer and editor at weekly newspapers before landing his coveted gig at HowStuffWorks.com.
-   
+      <h3>Josh Clark
+      </h3>
+      <p>A senior writer at HowStuffWorks.com and co-host of the podcast Stuff You Should Know where he simplifies and
+        reveals surprising facts about common ideas. Josh began his writing career when his third-grade teacher told him
+        a
+        short story he wrote was kind of good. From that moment on he has been writing. Josh pursued a profession as a
+        journalist and worked as a writer and editor at weekly newspapers before landing his coveted gig at
+        HowStuffWorks.com.
+      </p>
       <!-- Section sub-heading -->
-      Chuck Bryant
+      <h3>Chuck Bryant
+      </h3>
+      <p>Co-host of the Stuff You Should Know podcast, a platform he uses to educate the public about common things and
+        how they work. Bryant also writes articles for the site, touching on a potpourri of various subjects. Chuck
+        earned
+        an English degree at the University of Georgia and following graduation, spent the next decade traveling. Upon
+        returning from his travels, Bryant hooked up with HowStuffWorks.com, co-host Josh Clark was hired, and the pair
+        bonded immediately over their love of Hunter S. Thompson, the fight-or-flight response and dive bars.
+      </p>
 
-      Co-host of the Stuff You Should Know podcast, a platform he uses to educate the public about common things and how they work. Bryant also writes articles for the site, touching on a potpourri of various subjects. Chuck earned an English degree at the University of Georgia and following graduation, spent the next decade traveling. Upon returning from his travels, Bryant hooked up with HowStuffWorks.com, co-host Josh Clark was hired, and the pair bonded immediately over their love of Hunter S. Thompson, the fight-or-flight response and dive bars.
-      
-
-
-
+    </section>
 
   </main>
-  
 
+  <footer>
+    <p><small>&copy; SYSK 2023
+      </small></p>
+  </footer>
 
-
-  
-
-  <!-- Include the tag for footer content -->
- <footer>
-  <p><small>&copy; SYSK 2023 
-  </small></p>
- </footer> 
-  
 </body>
+
 </html>
