--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -7,6 +7,19 @@
   <title>Document</title>
 </head>
 <body>
+
+  <header role="banner">
+
+    <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
+    <nav role="navigation">
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="../build-a-website/episodes/episodes.html">Episodes</a></li>
+      </ul>
+    </nav>
+
+
+  </header>
   <!-- Include the tag for introductory content -->
 
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
