--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -20,17 +20,9 @@
 
 
   </header>
-  <!-- Include the tag for introductory content -->
-
-    <!-- Display sysk logo nested in an anchor tag to link to index.html -->
   
-    <!-- Write the markup for a navigation and link items to appropriate pages -->
-    About
-    Episodes
-
-
-
-  <!-- Add an element that represents the main content of the page --> 
+  <main>
+<!-- Add an element that represents the main content of the page --> 
 
     <!-- Main heading for the page -->
     Featured Episodes
@@ -38,10 +30,15 @@
     There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this order.
 
     <!-- Display the following as a list and link to appropriate existing html page -->
-    1. Interesting Origins of Everday Phrases
-    2. The History of Fake Towns
-    3. Doppelgängers: Hey you, you're me!
+  <ol>
+<li>Interesting Origins of Everday Phrases</li>
+<li>The History of Fake Towns</li>
+<li>Doppelgängers: Hey you, you're me!</li>
+  </ol>
+   
 
+  </main>
+  
 
 
   <!-- Include the tag for footer content -->
