Added paragraph tags and headers
also fixed footer.

--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
 
   <header role="banner">
@@ -20,30 +22,29 @@
 
 
   </header>
-  
+
   <main>
-<!-- Add an element that represents the main content of the page --> 
+    <!-- Add an element that represents the main content of the page -->
 
     <!-- Main heading for the page -->
-    Featured Episodes
-
-    There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this order.
-
+    <h1>Featured Episodes </h1>
+    <p>There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this
+      order.
+    </p>
     <!-- Display the following as a list and link to appropriate existing html page -->
-  <ol>
-<li>Interesting Origins of Everday Phrases</li>
-<li>The History of Fake Towns</li>
-<li>Doppelgängers: Hey you, you're me!</li>
-  </ol>
-   
+    <ol>
+      <li>Interesting Origins of Everday Phrases</li>
+      <li>The History of Fake Towns</li>
+      <li>Doppelgängers: Hey you, you're me!</li>
+    </ol>
 
   </main>
-  
 
-
-  <!-- Include the tag for footer content -->
-  &copy; SYSK 2023 
-
+ <footer>
+  <p><small>&copy; SYSK 2023
+  </small></p>
+ </footer> 
 
 </body>
+
 </html>
