--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Featured Episodes</title>
 </head>
 
 <body>
@@ -33,9 +33,9 @@
     </p>
     <!-- Display the following as a list and link to appropriate existing html page -->
     <ol>
-      <li>Interesting Origins of Everday Phrases</li>
-      <li>The History of Fake Towns</li>
-      <li>Doppelgängers: Hey you, you're me!</li>
+      <li><a href="everyday-phrases.html">Interesting Origins of Everday Phrases</a></li>
+      <li><a href="fake-towns.html">The History of Fake Towns</a></li>
+      <li><a href="doppelgangers.html">Doppelgängers: Hey you, you're me!</a></li>
     </ol>
 
   </main>
