--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -15,7 +15,7 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../about.html">About</a></li>
         <li><a href="../build-a-website/episodes/episodes.html">Episodes</a></li>
       </ul>
     </nav>
