Added Navigation and header
Also included the footer and headings

--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -16,7 +16,7 @@
     <nav role="navigation">
       <ul>
         <li><a href="../about.html">About</a></li>
-        <li><a href="../build-a-website/episodes/episodes.html">Episodes</a></li>
+        <li><a href="episodes.html">Episodes</a></li>
       </ul>
     </nav>
 
@@ -24,7 +24,7 @@
   </header>
 
   <main>
-    <!-- Add an element that represents the main content of the page -->
+    
 
     <!-- Main heading for the page -->
     <h1>Featured Episodes </h1>
