--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -46,7 +46,7 @@
   <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there could!
   </p> 
   <!-- Link to external url: https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/  -->
- <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/">Click here to play episode on iHeart</a> 
+ <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/" aria-label="link to iheart radio podcast 105">Click here to play episode on iHeart</a> 
 
 
   <!-- Include a tag that groups the other two podcasts -->
@@ -62,12 +62,11 @@
 
   <!-- Display image relevant to topic -->
 
-  We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone
+ <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone
   what they found. That’s the gist of this episode!
-
+</p> 
   <!-- Link to existing html page within episodes directory; relevant to topic -->
-  Learn more
-
+<a href="everyday-phrases.html" aria-label="link to everday phrases podcast page">Learn more</a>  
 
   <!-- Include a tag for independent, self-contained content content -->
 
@@ -80,8 +79,7 @@
   Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
 
   <!-- Link to existing html page within episodes directory; relevant to topic -->
-  Learn more
-
+ <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
 
 
   <!-- Include the tag for footer content -->
