--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -22,64 +22,65 @@
 
 
   </header>
-  <!-- Include the tag for introductory content -->
+  <main>
+    <!-- Add an element that represents the main content of the page -->
+<section>
+  <h1>Doppelgängers: Hey you, you're me!</h1>
+  <img src="../images/doppelgangers.jpeg" alt="">
+  <p>>October 11, 2022 47 min</p>
 
-  <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-
-  <!-- Write the markup for a navigation and link items to appropriate pages -->
-
-
-
-  <!-- Add an element that represents the main content of the page -->
-
-
-  <!-- Include a tag that groups the information about this particular podcast -->
-
-  <!-- Display image relevant to topic -->
-
-  <!-- Main heading for the page -->
-  <h1>Doppelgängers: Hey you, you're me!
-  </h1>
-  <p>>October 11, 2022</p>
-  47 min
-
-  <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there could!
-  </p> 
+  <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
+    could!
+  </p>
   <!-- Link to external url: https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/  -->
- <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/" aria-label="link to iheart radio podcast 105">Click here to play episode on iHeart</a> 
+  <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/"
+    aria-label="link to iheart radio podcast 105">Click here to play episode on iHeart</a>
 
-
-  <!-- Include a tag that groups the other two podcasts -->
-
-  <!-- Section heading -->
+</section>
+<section>
   <h2>You might also like...</h2>
-
-
-  <!-- Include a tag for independent, self-contained content content -->
-
-  <!-- Section sub-heading -->
   <h3>Interesting Origins of Everday phrases</h3>
-
+<img src="../images/everyday-phrases.jpeg" alt="">
   <!-- Display image relevant to topic -->
 
- <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone
-  what they found. That’s the gist of this episode!
-</p> 
+  <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+    everyone
+    what they found. That’s the gist of this episode!
+  </p>
   <!-- Link to existing html page within episodes directory; relevant to topic -->
-<a href="everyday-phrases.html" aria-label="link to everday phrases podcast page">Learn more</a>  
+  <a href="everyday-phrases.html" aria-label="link to everday phrases podcast page">Learn more</a>
 
   <!-- Include a tag for independent, self-contained content content -->
 
   <!-- Section sub-heading -->
   <h3>The History of Fake Towns</h3>
-
+<img src="../images/fake-towns.jpeg" alt="">
   <!-- Display image relevant to topic -->
 
-  There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic suburb
+ <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
+  suburb
   Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-
+</p> 
   <!-- Link to existing html page within episodes directory; relevant to topic -->
- <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
+  <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a>
+
+
+</section>
+    <!-- Include a tag that groups the information about this particular podcast -->
+
+    <!-- Display image relevant to topic -->
+
+    <!-- Main heading for the page -->
+  
+    <!-- Include a tag that groups the other two podcasts -->
+
+    <!-- Section heading -->
+    
+
+
+
+
+  </main>
 
 
   <!-- Include the tag for footer content -->
