Added a new Title, roles and alt descriptors

--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Doppelgangers</title>
 </head>
 
 <body>
@@ -22,11 +22,11 @@
 
 
   </header>
-  <main>
+  <main role="main">
     <!-- Add an element that represents the main content of the page -->
 <section>
   <h1>Doppelgängers: Hey you, you're me!</h1>
-  <img src="../images/doppelgangers.jpeg" alt="">
+  <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
   <p>>October 11, 2022 47 min</p>
 
   <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
@@ -40,7 +40,7 @@
 <section>
   <h2>You might also like...</h2>
   <h3>Interesting Origins of Everday phrases</h3>
-<img src="../images/everyday-phrases.jpeg" alt="">
+<img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
   <!-- Display image relevant to topic -->
 
   <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
@@ -54,7 +54,7 @@
 
   <!-- Section sub-heading -->
   <h3>The History of Fake Towns</h3>
-<img src="../images/fake-towns.jpeg" alt="">
+<img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
   <!-- Display image relevant to topic -->
 
  <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
@@ -66,25 +66,12 @@
 
 
 </section>
-    <!-- Include a tag that groups the information about this particular podcast -->
-
-    <!-- Display image relevant to topic -->
-
-    <!-- Main heading for the page -->
-  
-    <!-- Include a tag that groups the other two podcasts -->
-
-    <!-- Section heading -->
-    
-
-
-
 
   </main>
 
 
   <!-- Include the tag for footer content -->
-  <footer>
+  <footer role="contentinfo">
     <p><small>&copy; SYSK 2023
       </small></p>
   </footer>
