Added relevant image links and alt descriptors

--- a/episodes/everyday-phrases.html
+++ b/episodes/everyday-phrases.html
@@ -32,7 +32,7 @@
     <!-- Include a tag that groups the information about this particular podcast -->
 
     <!-- Display image relevant to topic -->
-
+<img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
     <!-- Main heading for the page -->
     <h1>Interesting Origins of Everday Phrases
     </h1>
@@ -59,6 +59,7 @@
     <!-- Section sub-heading -->
     <h3>The History of Fake Towns
     </h3>
+    <img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
     <!-- Display image relevant to topic -->
 
    <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
@@ -73,6 +74,7 @@
     <!-- Section sub-heading -->
     <h3>Doppelgängers: Hey you, you're me!
     </h3>
+    <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
     <!-- Display image relevant to topic -->
 
   <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
