--- a/episodes/everyday-phrases.html
+++ b/episodes/everyday-phrases.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Everyday phrases</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     <!-- Main heading for the page -->
     <h1>Interesting Origins of Everday Phrases
     </h1>
-    <p>>December 15, 2022 49 min</p>
+    <p>December 15, 2022 49 min</p>
 
     <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
       everyone what they found. That’s the gist of this episode!
@@ -47,7 +47,6 @@
 
 
   </section>
-
 
   <!-- Include a tag that groups the other two podcasts -->
   <section>
@@ -66,7 +65,7 @@
       suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
     </p>
     <!-- Link to existing html page within episodes directory; relevant to topic -->
-    Learn more
+   <a href="fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a> 
 
 
     <!-- Include a tag for independent, self-contained content content -->
@@ -81,8 +80,8 @@
       could!
     </p>
     <!-- Link to existing html page within episodes directory; relevant to topic -->
-    Learn more
-
+   <a href="doppelgangers.html" aria-label="link to doppelgangers podcast page">Learn more
+  </a> 
 
   </section>
 
