--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -15,6 +15,7 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="episodes.html">Episodes</a></li>
       </ul>
