--- a/episodes/fake-towns.html
+++ b/episodes/fake-towns.html
@@ -15,6 +15,7 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="episodes.html">Episodes</a></li>
       </ul>
@@ -53,7 +54,7 @@
         everyone what they found. That’s the gist of this episode!
       </p>
 
-      <a href="everyday-phrases.html">Learn more</a>
+      <a href="everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
 
       <!-- Include a tag for independent, self-contained content content -->
 
