Added Home Nav to index.html
also fixed section brakets

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="../images/sysk-logo.webp" alt="logo of the stuff you should know podcast">
     <nav role="navigation">
       <ul>
+        <li><a href="index.html" aria-label="link to home page">Home</a></li>
         <li><a href="about.html" aria-label="link to about page">About</a></li>
         <li><a href="episodes/episodes.html" aria-label="link to episodes page">Episodes</a></li>
       </ul>
@@ -58,7 +59,7 @@
     </section>
 
 
-    </section>
+    <section>
 
     <h2>Featured Episodes</h2>
 
