Switched Sections for Articles in index.html

--- a/index.html
+++ b/index.html
@@ -60,50 +60,66 @@
 
 
     <section>
+      <article>
+        <h3>Interesting Origins of Everday Phrases</h3>
+        <!-- Display image relevant to topic -->
+        <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
 
-    <h2>Featured Episodes</h2>
+        <p> We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and
+          tell
+          everyone
+          what they found. That’s the gist of this episode!
+        </p>
+        <!-- Link to existing html page within episodes directory; relevant to topic -->
+        <a href="../episodes/everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
 
-    
-    <h3>Interesting Origins of Everday Phrases</h3>
-    <!-- Display image relevant to topic -->
-    <img src="../images/everyday-phrases.jpeg" alt="image of SYSK interesting origins of everyday phrases podcast">
-
-    <p> We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
-      everyone
-      what they found. That’s the gist of this episode!
-    </p>
-    <!-- Link to existing html page within episodes directory; relevant to topic -->
-    <a href="../episodes/everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
-
-    <!-- Include a tag for independent, self-contained content content -->
-    </section>
-    <section>
-      <!-- Section sub-heading -->
-      <h3>The History of Fake Towns</h3>
-      <img src="../images/fake-towns.jpeg" alt="image of SYSK fake towns podcast">
-      <!-- Display image relevant to topic -->
-
-      <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
-        suburb
-        Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-      </p>
-      <!-- Link to existing html page within episodes directory; relevant to topic -->
-      <a href="../episodes/fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a>
+        <!-- Include a tag for independent, self-contained content content -->
 
 
-      <!-- Include a tag for independent, self-contained content content -->
-    </section>
-    <section>
-      <!-- Section sub-heading -->
-      <h3>Doppelgängers: Hey you, you're me!</h3>
-      <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
-      <!-- Display image relevant to topic -->
+      </article>
 
-      <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
-        could!</p>
+      <article>
+        <h2>Featured Episodes</h2>
 
-      <!-- Link to existing html page within episodes directory; relevant to topic -->
-      <a href="../episodes/doppelgangers.html" aria-label="link to doppelgagners podcast page">Learn more</a>
+
+
+
+        <!-- Section sub-heading -->
+        <h3>The History of Fake Towns</h3>
+        <img src="../images/fake-towns.jpeg" alt="image of SYSK fake towns podcast">
+        <!-- Display image relevant to topic -->
+
+        <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this
+          idyllic
+          suburb
+          Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
+        </p>
+        <!-- Link to existing html page within episodes directory; relevant to topic -->
+        <a href="../episodes/fake-towns.html" aria-label="link to fake towns podcast page">Learn more</a>
+
+
+        <!-- Include a tag for independent, self-contained content content -->
+
+
+      </article>
+
+      <article>
+        <!-- Section sub-heading -->
+        <h3>Doppelgängers: Hey you, you're me!</h3>
+        <img src="../images/doppelgangers.jpeg" alt="image of SYSK doppoelgangers podcast">
+        <!-- Display image relevant to topic -->
+
+        <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet
+          there
+          could!</p>
+
+        <!-- Link to existing html page within episodes directory; relevant to topic -->
+        <a href="../episodes/doppelgangers.html" aria-label="link to doppelgagners podcast page">Learn more</a>
+
+      </article>
+
+
+
     </section>
 
 
