--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -39,9 +39,10 @@
     <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/doppelgangers-hey-you-youre-me-103115512/"
       aria-label="link to iheart radio podcast doppelgangers">Click here to play episode on iHeart</a>
   
-  </article>
+  </article> 
+</section>
   
-
+<section>
   <h2>You might also like...</h2>
 
   <article>
@@ -75,7 +76,7 @@
   
 
 </section>
-
+  
   </main>
 
 
