Added final edits to articles and episodes
After this, typos and such will be looked into

--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -27,19 +27,22 @@
 
   <main role="main">
     
+<section>
+  <!-- Main heading for the page -->
+  <h1>Featured Episodes </h1>
+  <p>There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this
+    order.
+  </p>
+  <!-- Display the following as a list and link to appropriate existing html page -->
+  <ol>
+    <li><a href="everyday-phrases.html">Interesting Origins of Everday Phrases</a></li>
+    <li><a href="fake-towns.html">The History of Fake Towns</a></li>
+    <li><a href="doppelgangers.html">Doppelgängers: Hey you, you're me!</a></li>
+  </ol>
 
-    <!-- Main heading for the page -->
-    <h1>Featured Episodes </h1>
-    <p>There are so many episodes of Stuff You Should Know to listen to but here are three of our favourites; in this
-      order.
-    </p>
-    <!-- Display the following as a list and link to appropriate existing html page -->
-    <ol>
-      <li><a href="everyday-phrases.html">Interesting Origins of Everday Phrases</a></li>
-      <li><a href="fake-towns.html">The History of Fake Towns</a></li>
-      <li><a href="doppelgangers.html">Doppelgängers: Hey you, you're me!</a></li>
-    </ol>
 
+</section>
+  
   </main>
 
  <footer role="contentinfo">
