--- a/episodes/fake-towns.html
+++ b/episodes/fake-towns.html
@@ -27,50 +27,58 @@
 
   <main role="main">
     <section>
-      <!-- Section sub-heading -->
-      <h1>The History of Fake Towns
-      </h1>
-      <img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
-      <!-- Display image relevant to topic -->
+      <article>
+        <!-- Section sub-heading -->
+        <h1>The History of Fake Towns
+        </h1>
+        <img src="../images/fake-towns.jpeg" alt="image of fake towns podcast cover art">
+        <!-- Display image relevant to topic -->
 
-      <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic
-        suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
-      </p>
-      <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/the-history-of-fake-towns-103424179/"
-        aria-label="link to iheart radio podcast fake towns">Click here to play episode on iHeart</a>
+        <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this
+          idyllic
+          suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.
+        </p>
+        <a href="https://www.iheart.com/podcast/105-stuff-you-should-know-26940277/episode/the-history-of-fake-towns-103424179/"
+          aria-label="link to iheart radio podcast fake towns">Click here to play episode on iHeart</a>
+
+
+      </article>
 
     </section>
     <section>
       <!-- Section heading -->
       <h2>You might also like...</h2>
+      <article>
+        <!-- Display image relevant to topic -->
+        <img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
+        <!-- Main heading for the page -->
+        <h1>Interesting Origins of Everday Phrases
+        </h1>
+        <p>December 15, 2022 49 min</p>
 
-      <!-- Display image relevant to topic -->
-      <img src="../images/everyday-phrases.jpeg" alt="image of everyday phrases podcast cover art">
-      <!-- Main heading for the page -->
-      <h1>Interesting Origins of Everday Phrases
-      </h1>
-      <p>December 15, 2022 49 min</p>
+        <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
+          everyone what they found. That’s the gist of this episode!
+        </p>
 
-      <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell
-        everyone what they found. That’s the gist of this episode!
-      </p>
+        <a href="everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
 
-      <a href="everyday-phrases.html" aria-label="link to everyday phrases podcast page">Learn more</a>
+        <!-- Include a tag for independent, self-contained content content -->
+      </article>
 
-      <!-- Include a tag for independent, self-contained content content -->
+      <article>
+        <!-- Section sub-heading -->
+        <h3>Doppelgängers: Hey you, you're me!
+        </h3>
+        <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
+        <!-- Display image relevant to topic -->
 
-      <!-- Section sub-heading -->
-      <h3>Doppelgängers: Hey you, you're me!
-      </h3>
-      <img src="../images/doppelgangers.jpeg" alt="image of doppelgangers podcast cover art">
-      <!-- Display image relevant to topic -->
-
-      <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there
-        could!
-      </p>
-      <!-- Link to existing html page within episodes directory; relevant to topic -->
-      <a href="doppelgangers.html" aria-label="link to doppelgangers podcast page">Learn more</a>
-
+        <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet
+          there
+          could!
+        </p>
+        <!-- Link to existing html page within episodes directory; relevant to topic -->
+        <a href="doppelgangers.html" aria-label="link to doppelgangers podcast page">Learn more</a>
+      </article>
     </section>
 
   </main>
