--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
 
       </article>
-
+    </section>
+    <section>
       <article>
         <h2>Featured Episodes</h2>
 
@@ -117,11 +118,7 @@
         <a href="../episodes/doppelgangers.html" aria-label="link to doppelgagners podcast page">Learn more</a>
 
       </article>
-
-
-
     </section>
-
 
 
   </main>
